[profile.release]
panic = 'unwind'
split-debuginfo = "unpacked"


[workspace]
members = [
	'node',
	"pallets/proposals",
	"pallets/briefs",
	"pallets/grants",
	"pallets/crowdfunding",
	"pallets/deposits",
	"pallets/disputes",
	"runtime/integration-tests",
	"runtime/imbue-kusama",
	"runtime/common",
]
