[profile.release]
panic = 'unwind'
split-debuginfo = "unpacked"

[workspace.package]
authors = ["imbue <https://github.com/ImbueNetwork>"]
edition = "2021"
repository = "https://github.com/ImbueNetwork/imbue/"
license = "Apache 2.0"

[features]


[workspace]
resolver = "2"

members = [
	'node',
	"pallets/proposals",
	"pallets/briefs",
	"pallets/grants",
	"pallets/crowdfunding",
	"pallets/deposits",
	"pallets/fellowship",
	"runtime/integration-tests",
	"runtime/imbue-kusama",
	"runtime/common",
]
