[profile.release]
panic = 'unwind'
split-debuginfo = "unpacked"
opt-level = 3

[workspace.package]
authors = ["imbue <https://github.com/ImbueNetwork>"]
edition = "2021"
repository = "https://github.com/ImbueNetwork/imbue/"
license = "Apache 2.0"

[workspace]
resolver = "2"

members = [
	'node',
	"pallets/proposals",
	"pallets/briefs",
	"pallets/grants",
	"pallets/crowdfunding",
	"pallets/deposits",
	"pallets/fellowship",
	"runtime/integration-tests",
	"runtime/imbue-kusama",
	"runtime/common",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1