[package]
name = "common-types"
homepage = 'https://imbue.network'
description = 'Common types for Imbue runtime'
version = '0.1.0'
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

bitflags = { version = "2.4.1", default-features = false }
serde = { version = "1.0.188", default-features = false }

# substrate dependencies
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# local dependencies
common-traits = { path = '../common-traits', default-features = false }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[features]
default = [ 'std' ]
std = [
	'bitflags/std',
	'codec/std',
	'common-traits/std',
	'frame-support/std',
	'scale-info/std',
	'serde/std',
	'sp-runtime/std',
	'sp-std/std',
	'xcm/std',
]
try-runtime = [
	"common-traits/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]



