[package]
name = 'proofs'
authors = ['imbue <https://github.com/ImbueNetwork>']
edition = '2018'
homepage = 'https://imbue.network'
license = "LGPL-3.0"
repository = 'https://github.com/ImbueNetwork/imbue-collator'
version = '0.1.0'
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'] , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-std/std"
]


