[package]
name = 'proofs'
homepage = 'https://imbue.network'
version = '0.1.0'
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'] , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-std/std"
]


