[package]
name = 'proofs'
homepage = 'https://imbue.network'
version = '0.1.0'
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    "sp-std/std",
]


